test/scc_test/exp/semantic-errors/064.a
064.t:3:9: error: expression must have integral type